toStart (toBegin) method implemented

--- a/slyDemo/views/horizontal.html
+++ b/slyDemo/views/horizontal.html
@@ -48,12 +48,12 @@
                 <button class="btn prev"><i class="icon-chevron-left"></i> item</button>
                 <button class="btn backward"><i class="icon-chevron-left"></i> move</button>
                 <div class="btn-group">
-                    <button class="btn toStart">toStart</button>
+                    <button class="btn toStart" sly-to-begin sly-frame="basicSly">toStart</button>
                     <button class="btn toCenter" sly-to-center sly-frame="basicSly">toCenter</button>
                     <button class="btn toEnd">toEnd</button>
                 </div>
                 <div class="btn-group">
-                    <button class="btn toStart" data-item="10"><strong>10</strong> toStart</button>
+                    <button class="btn toStart" sly-to-begin sly-frame="basicSly" sly-data-item="10"><strong>10</strong> toStart</button>
                     <button class="btn toCenter" sly-to-center sly-frame="basicSly" sly-data-item="10"><strong>10</strong> toCenter</button>
                     <button class="btn toEnd" data-item="10"><strong>10</strong> toEnd</button>
                 </div>
