--- a/slyDemo/views/vertical.html
+++ b/slyDemo/views/vertical.html
@@ -76,7 +76,7 @@ quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequa
 
 				<p>
 					<span class="btn-group">
-						<button class="btn toStart">toStart</button>
+						<button class="btn toStart" sly-to-begin sly-frame="nonitembased">toStart</button>
 						<button class="btn toCenter" sly-to-center sly-frame="nonitembased">toCenter</button>
 						<button class="btn toEnd">toEnd</button>
 					</span>
