toEnd method implemented

--- a/slyDemo/views/vertical.html
+++ b/slyDemo/views/vertical.html
@@ -78,7 +78,7 @@ quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequa
 					<span class="btn-group">
 						<button class="btn toStart" sly-to-begin sly-frame="nonitembased">toStart</button>
 						<button class="btn toCenter" sly-to-center sly-frame="nonitembased">toCenter</button>
-						<button class="btn toEnd">toEnd</button>
+						<button class="btn toEnd" sly-to-end sly-frame="nonitembased">toEnd</button>
 					</span>
 
 					<span class="btn-group">
