--- a/slyDemo/views/horizontal.html
+++ b/slyDemo/views/horizontal.html
@@ -50,12 +50,12 @@
                 <div class="btn-group">
                     <button class="btn toStart" sly-to-begin sly-frame="basicSly">toStart</button>
                     <button class="btn toCenter" sly-to-center sly-frame="basicSly">toCenter</button>
-                    <button class="btn toEnd">toEnd</button>
+                    <button class="btn toEnd" sly-to-end sly-frame="basicSly">toEnd</button>
                 </div>
                 <div class="btn-group">
                     <button class="btn toStart" sly-to-begin sly-frame="basicSly" sly-data-item="10"><strong>10</strong> toStart</button>
                     <button class="btn toCenter" sly-to-center sly-frame="basicSly" sly-data-item="10"><strong>10</strong> toCenter</button>
-                    <button class="btn toEnd" data-item="10"><strong>10</strong> toEnd</button>
+                    <button class="btn toEnd" sly-to-end sly-frame="basicSly" sly-data-item="10"><strong>10</strong> toEnd</button>
                 </div>
                 <div class="btn-group">
                     <button class="btn add"><i class="icon-plus-sign"></i>
