--- a/slyDemo/views/landing.html
+++ b/slyDemo/views/landing.html
@@ -1,4 +1,5 @@
 <div class="container" style="margin-top: 20px;">
 	<a href="index.html#/horizontal"><button class="btn btn-primary">Horizontal Demo</button></a>
 	<a href="index.html#/vertical"><button class="btn btn-primary">Vertical Demo</button></a>
+	<a href="index.html#/ngRepeat"><button class="btn btn-primary">ngRepeat Demo</button></a>
 </div>
